Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
           <h1>
 <a id="resume" class="anchor" href="#resume" aria-hidden="true"><span class="octicon octicon-link"></span></a>resume</h1>
 
+<p><a href="http://upload.siamza.com/1735438" target="_blank"><img border="0" src="http://upload.siamza.com/file_upload/modify/290115/1735438.jpg"></a></p>
+
 <p><strong>นาย ธีรภัทร เดชวัฒน์</strong> </p>
 
 <p><strong>อายุ 21 ปี เกิดวันที่ 12 มกราคม 2537</strong></p>
